--- a/frontend/src/components/common/SectionStatusBadge.module.css
+++ b/frontend/src/components/common/SectionStatusBadge.module.css
@@ -9,6 +9,11 @@
     text-align: center;
     text-shadow: 0 0 0.125em var(--shadow-color);
     font-size: 0.75rem;
+    width: fit-content;
+
+    &::after {
+        vertical-align: middle;
+    }
 
     &[data-status="O"] {
         background-color: var(--palette-green);
