--- a/frontend/src/components/course-search/SearchControls.module.css
+++ b/frontend/src/components/course-search/SearchControls.module.css
@@ -2,16 +2,45 @@
     grid-area: controls;
 
     display: grid;
-    grid-template-areas: "dropdown input button" "tags tags tags";
-    grid-template-columns: auto 1fr auto;
-    column-gap: 1rem;
+
+    grid-template-areas:
+        "input input"
+        "term filter";
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5em 1em;
+
+    @media (--viewport-medium) {
+        grid-template-areas: "term input filter";
+        grid-template-columns: auto 1fr auto;
+    }
 
     padding: 1rem;
     border-bottom: 1px solid var(--bg-1);
     transition: border-bottom-color var(--theme-transition-duration);
+
+    & .termSelect {
+        grid-area: term;
+    }
+
+    & .filterButton {
+        grid-area: filter;
+
+        border: none;
+        background-color: var(--hbg);
+        color: var(--hfg);
+        font: inherit;
+        display: grid;
+        grid-template-columns: auto 1fr;
+        align-items: center;
+        column-gap: 0.5em;
+        padding: 0.25rem 0.5rem;
+        cursor: pointer;
+    }
 }
 
 .inputGroup {
+    grid-area: input;
+
     display: flex;
     flex-wrap: wrap-reverse;
 
@@ -21,6 +50,7 @@
 
     & .filterGroup {
         display: flex;
+        flex-wrap: wrap;
         gap: 0.25rem;
     }
 
@@ -33,17 +63,4 @@
 
         flex-grow: 1;
     }
-}
-
-.filterButton {
-    border: none;
-    background-color: var(--hbg);
-    color: var(--hfg);
-    font: inherit;
-    display: grid;
-    grid-template-columns: auto 1fr;
-    align-items: center;
-    column-gap: 0.5em;
-    padding: 0.25rem 0.5rem;
-    cursor: pointer;
 }
